# stochastic-nbv-4-mesh-refinement

./: .gitignore  README.md
accuracy_checker/: .gitignore  CMakeLists.txt
accuracy_checker/examples/: CMakeLists.txt
accuracy_checker/examples/include/: OpenMvgParser.h  ReportGenerator.hpp  aliases.hpp  (+2 more)
accuracy_checker/include/: AccuracyModel.hpp  AverageVarianceEstimator.hpp  CRTuplesGenerator.hpp  ComputerVisionAccuracyModel.hpp  CrossRatioTuple.hpp  ImagePointVarianceEstimator.hpp  PhotogrammetristAccuracyModel.hpp  Point3DVarianceEstimator.hpp  WorstEigenvalueVarianceEstimator.hpp  WorstTraceVarianceEstimator.hpp  alias_definition.hpp  meshac_type_definition.hpp  type_definition.hpp  utilities.hpp
accuracy_checker/src/: AverageVarianceEstimator.cpp  BasicPhotogrammetristAccuracyModel.cpp  CRTuplesGenerator.cpp  Color.cpp  Colorer.cpp  ComputerVisionAccuracyModel.cpp  CrossRatioTuple.cpp  DeterminantVarianceEstimator.cpp  FaceAccuracyModel.cpp  FacetColorer.cpp  GeneralIndexFaceAccuracyModel.cpp  ImagePointVarianceEstimator.cpp  InvariantAccuracyModel.cpp  InvertedResidualPointAccuracyModel.cpp  MeshColorer.cpp  NCCFaceAccuracyModel.cpp  OffParser.cpp  PhotogrammetristAccuracyModel.cpp  Point3DVarianceEstimator.cpp  PointAccuracyModel.cpp  ResidualPointAccuracyModel.cpp  SSDNFaceAccuracyModel.cpp  ThresholdColor.cpp  VertexColorer.cpp  WorstEigenvalueVarianceEstimator.cpp  WorstSingularValueVarianceEstimator.cpp  WorstTraceVarianceEstimator.cpp  camera_utilities.cpp  main.cpp  utilities.cpp
accuracy_checker/test/: CMakeLists.txt
cam_position_generator/: CMakeLists.txt  README.md
cam_position_generator/examples/: CMakeLists.txt  normals.txt
cam_position_generator/src/: AngleDifferenceViewEstimator.cpp  AngleDistanceViewEstimator.cpp  AutonomousLocalPSOCamGenerator.cpp  AutonomousMCMCCamGenerator.cpp  AutonomousMultipointHierarchicalGraphicalModel.cpp  AutonomousPSOCamGenerator.cpp  AutonomousRandomLocalPSOGenerator.cpp  AutonomousStochasticMethod.cpp  BasicGraphicalModel.cpp  BruteForceSolverGenerator.cpp  CompleteReportWriter.cpp  CplexVectorOperations.cpp  CplexViewEstimator.cpp  DistanceCameraViewEstimator.cpp  ExhaustiveReportWriter.cpp  FlipperSolverGenerator.cpp  Formulation.cpp  GaussianSampleGenerator.cpp  GraphicalModelBuilder.cpp  HeavyOrientationHierarchicalGraphicalModel.cpp  HierarchicalDiscreteGraphicalModel.cpp  ICMSolverGenerator.cpp  LOCSolverGenerator.cpp  LocalPSOCamGenerator.cpp  MCMCCamGenerator.cpp  MCMCSamplerGenerator.cpp  MiddleburyDatasetReader.cpp  MiddleburyDatasetScorer.cpp  MultiBruteForceSolverGenerator.cpp  MultipointHierarchicalGraphicalModel.cpp  OptimalViewEstimator.cpp  OrientationHierarchicalGraphicalModel.cpp  PSOCamGenerator.cpp  Particle.cpp  ReportWriter.cpp  ScorerGM.cpp  SimpleConstrainedAngleViewEstimator.cpp  SolverGenerator.cpp  StochasticMethod.cpp  SwarmReportWriter.cpp  (+3 more)
cam_position_generator/test/: .gitignore  CMakeLists.txt  points.txt
evaluation_cam/: .gitignore  CMakeLists.txt
evaluation_cam/include/: BasicEvaluator.hpp  Evaluator.hpp  EvaluatorDatabase.hpp  EvaluatorNoCopy.hpp  FileHandler.hpp  InputReader.hpp  KDTree.hpp  Mapper.hpp  OpenMvgJsonHandler.hpp  OpenMvgParser.hpp  OpenMvgPoseConverter.hpp  OpenMvgSysCall.hpp  PointKDTree.hpp  PoseEvaluator.hpp  PoseReader.hpp  SshHandler.hpp  aliases.h  type_definition.h  utilities.hpp
evaluation_cam/main/: emulate.cpp  intersection.cpp  main.cpp  main_closest.cpp  main_povray.cpp  pipeline.cpp  sequential.cpp
evaluation_cam/src/: BasicEvaluator.cpp  Evaluator.cpp  EvaluatorDatabase.cpp  EvaluatorNoCopy.cpp  EvaluatorSequence.cpp  FileHandler.cpp  InputReader.cpp  KDTree.cpp  Mapper.cpp  OpenMvgJsonHandler.cpp  OpenMvgParser.cpp  OpenMvgPoseConverter.cpp  OpenMvgSysCall.cpp  PointCloudIntersecter.cpp  PoseEvaluator.cpp  PoseReader.cpp  SshHandler.cpp  main.cpp  mainnocopy.cpp  utilities.cpp
evaluation_suit/: .gitignore  CMakeLists.txt  README.md
evaluation_suit/eval/: compare_all.sh  complete_execute.sh  default_config.ini
evaluation_suit/include/: BasicEvaluator.hpp  EvaluatorDatabase.hpp  EvaluatorSequence.hpp  Exceptions.hpp  JsonException.hpp  KDTree.hpp  Mapper.hpp  MiddleburyDatasetEvaluator.hpp  MiddleburyDatasetReader.hpp  NoClosePointException.hpp  OpenMvgParser.hpp  OpenMvgSysCall.hpp  PlyRefiner.hpp  PointCloudIntersecter.hpp  PointKDTree.hpp  PoseEvaluator.hpp  PoseReader.hpp  SSHException.hpp  SequentialEvaluator.hpp  SfMData.h  SourceDirectoryDoesNotExistsException.hpp  SshHandler.hpp  SystemEvaluator.hpp  UnableToCreateDirectoryException.hpp  aliases.h  type_definition.h  utilities.hpp
evaluation_suit/main/: comparator.cpp  coverage.cpp  coverage_photoscan.cpp  generate_basic.cpp  intersection.cpp  main_db.cpp  middlebury_evaluator.cpp  middlebury_generate_pc.cpp  middlebury_tuner.cpp  multistep.cpp  refine_cloud.cpp  test_ssh.cpp
evaluation_suit/src/: BasicEvaluator.cpp  EvaluatorDatabase.cpp  EvaluatorSequence.cpp  MiddleburyDatasetEvaluator.cpp  MiddleburyDatasetReader.cpp  OpenMvgParser.cpp  OpenMvgPoseConverter.cpp  OpenMvgSysCall.cpp  PlyRefiner.cpp  PointKDTree.cpp  PoseEvaluator.cpp  PoseReader.cpp  SequentialEvaluator.cpp  SystemEvaluator.cpp  plotter.py  utilities.cpp
mesh_cam_placing/: .gitignore  CMakeLists.txt  cams.json  cams_file.off
mesh_cam_placing/include/: CamReader.hpp  OpenMvgParser.h  aliases.h  sphere_handler.hpp  visualization_utils.hpp
mesh_cam_placing/src/: CamReader.cpp  OpenMvgParser.cpp  main.cpp  main_best_score.cpp  main_final.cpp  main_sequence.cpp  sphere_handler.cpp  visualization_utils.cpp
mesh_generator/: CMakeLists.txt
mesh_generator/include/: ManifoldReconstructorConfigurator.h  OpenMvgParser.h  PathCreator.h  ReconstructFromSfMData.h  ReconstructorFromOut.h
mesh_generator/src/: Main.cpp  ORBIncrementalParser.cpp  ORBParser.cpp  OpenMvgParser.cpp  ReconstructFromSfMData.cpp  ReconstructorFromOut.cpp  main.cpp
povray_pose_generator/: CMakeLists.txt
povray_pose_generator/include/: aliases.h
povray_pose_generator/src/: complex_translation_gen.cpp  main.cpp  mapping.cpp
(+290 files in other folders)
